--- a/about.html
+++ b/about.html
@@ -5,8 +5,33 @@ description: This is what I do.
 background: '/img/bg-about.jpg'
 ---
 
+<body>
+    <h1>Graduate in Statistics</h1>
+    <br>
+    <h5>Technical skills: Python, R, SQL, HTML, ML & DL libraries</h5>
+    <br>
+    <h2>Education</h2>
+    <ul>
+        <li>M.S. in Statistics - University of Geneva (February 2023)</li>
+        <li>B.S. Economics & Management - University of Geneva (August 2020)</li>
+    </ul>
+    <content>
+
+    </content>
+
+    Download my <img src="/img/cv.jpg" style="width: 40px;"> in <a href="/files/CV_RenéDeChamps_EN.pdf"><i>English</i></a> or <a href="/files/CV_RenéDeChamps_FR.pdf"><i>French</i></a>
+    
+    
+</body>
+
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
 
 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+
+
+
+
+
+
