about final template

--- a/about.html
+++ b/about.html
@@ -1,36 +1,43 @@
 ---
-layout: page
-title: About Me
-description: This is what I do.
-background: '/img/bg-about.jpg'
+layout: default
 ---
 
-<body>
-    <h1>Graduate in Statistics</h1>
-    <br>
-    <h5>Technical skills: Python, R, SQL, HTML, ML & DL libraries</h5>
-    <br>
-    <h2>Education</h2>
-    <ul>
-        <li>M.S. in Statistics - University of Geneva (February 2023)</li>
-        <li>B.S. Economics & Management - University of Geneva (August 2020)</li>
-    </ul>
-    <content>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>About me Section HTML & CSS</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/assets/style.css">
+</head>
 
-    </content>
+<div class="section">
+    <div class="hero">
+        <br>
+        <br>
+        <br>
+        <br>
+        <article>
+            <h1>About me</h1>
+            <img src="/img/ReneDeChamps_picture_squared.jpg">
+            Download my <img src="/img/cv.jpg" style="width: 40px; height: 40px; display:inline-block; margin-bottom: 40px;"> in <a href="/files/CV_RenéDeChamps_EN.pdf"><i>English</i></a> or <a href="/files/CV_RenéDeChamps_FR.pdf"><i>French</i></a>
+            <content>
+                <br>
+                <h2>Graduate in Statistics</h2>
+                <br>
+                <h5>Technical skills: Python, R, SQL, HTML, ML & DL libraries</h5>
+                <br>
+                <h2>Education</h2>
+                <ul>
+                    <li>M.S. in Statistics - University of Geneva (February 2023)</li>
+                    <li>B.S. Economics & Management - University of Geneva (August 2020)</li>
+                </ul>
+                <h5>René de Champs</h5>
 
-    Download my <img src="/img/cv.jpg" style="width: 40px;"> in <a href="/files/CV_RenéDeChamps_EN.pdf"><i>English</i></a> or <a href="/files/CV_RenéDeChamps_FR.pdf"><i>French</i></a>
-    
-    
-</body>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
-
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
-
-
+            </content>
+            </article>
+    </div>
+</div>
 
 
 
