better style the office, removed warnings twitter,

--- a/_posts/2021-12-17-Pair_digits_classification.html
+++ b/_posts/2021-12-17-Pair_digits_classification.html
@@ -1,5 +1,5 @@
 ---
-title: "[14x050] Pair Digits Classification"
+title: "Pair Digits Classification"
 subtitle: "Comparing different deep network architectures in a digit images classification task"
 ---
 
