--- a/_posts/2021-12-17-Deep_Learning_framework.html
+++ b/_posts/2021-12-17-Deep_Learning_framework.html
@@ -1,5 +1,5 @@
 ---
-title: "[14x050] Deep Learning Framework"
+title: "Deep Learning Framework"
 subtitle: "Design of a mini deep learning framework using only PyTorch's tensor operations and the standard math library"
 ---
 
