sales insights mostly done, added skills, css, us

--- a/_posts/2021-12-17-Pair_digits_classification.html
+++ b/_posts/2021-12-17-Pair_digits_classification.html
@@ -1,6 +1,7 @@
 ---
 title: "Pair Digits Classification"
 subtitle: "Comparing different deep network architectures in a digit images classification task"
+skills: "[DL]"
 ---
 
 <!DOCTYPE html>
