--- a/about.html
+++ b/about.html
@@ -14,26 +14,20 @@ layout: default
 <div class="section">
     <div class="hero">
         <br>
-        <br>
-        <br>
-        <br>
-        <article>
+        <hr style="height:56px; visibility:hidden;" />
+        <article  style="color: #AABDBF;">
             <h1>About me</h1>
             <img src="/img/ReneDeChamps_picture_squared.jpg">
-            Download my <img src="/img/cv.jpg" style="width: 40px; height: 40px; display:inline-block; margin-bottom: 40px;"> in <a href="/files/CV_RenéDeChamps_EN.pdf"><i>English</i></a> or <a href="/files/CV_RenéDeChamps_FR.pdf"><i>French</i></a>
-            <content>
-                <br>
-                <h2>Graduate in Statistics</h2>
-                <br>
-                <h5>Technical skills: Python, R, SQL, HTML, ML & DL libraries</h5>
-                <br>
-                <h2>Education</h2>
-                <ul>
+            <h5>René de Champs</h5>
+            Download my <img src="/img/cv.jpg" style="width: 40px; height: 40px; display:inline-block; margin-bottom: 35px;"> in <a href="/files/CV_RenéDeChamps_EN.pdf" style="color: #AABDBF;"><i>English</i></a> or <a href="/files/CV_RenéDeChamps_FR.pdf" style="color: #AABDBF;"><i>French</i></a>
+            <h2>Graduate in Statistics</h2>
+            <content style="color: black;">
+                <h3 style="padding-top: 5px;"><span style="text-decoration: underline;">Education</span></h3>
+                <ul style="list-style: none;">
                     <li>M.S. in Statistics - University of Geneva (February 2023)</li>
                     <li>B.S. Economics & Management - University of Geneva (August 2020)</li>
                 </ul>
-                <h5>René de Champs</h5>
-
+                <h6 style="color: black;">Technical skills: Python, R, SQL, HTML, ML & DL libraries</h6>
             </content>
             </article>
     </div>
