bg, styling in about post and posts

--- a/_posts/2023-10-06-Sales_Insights.html
+++ b/_posts/2023-10-06-Sales_Insights.html
@@ -140,6 +140,7 @@ background: '/img/posts/sales/bg_sales_3.jpg'
 		<ul>
 			<li><a href="#kpi" class="col_blue">Key Performance Indicator</a></li>
 			<li><a href="#dashboard" class="col_blue">Dashboard</a></li>
+			<li><a href="#BI" class="col_blue">Business Insights</a></li>
 		</ul>
 	</ul>
 
@@ -733,6 +734,64 @@ Profit&nbsp;Margin&nbsp;Contribution&nbsp;%&nbsp;=<br><span class="Keyword" styl
 
 	<h3 id="dashboard">Dashboard</h3>
 
+	<p>
+		Using Power BI, I was able to create the following dashboard. It displays our 3 KPIs in various plots. We can change the granularity at many different levels: year, sales type or  
+		the market contributor. This first dashboard shows the overall trend and accomplishment over the 4 years of focus.
+	</p>
+
+	<figure>
+		<img src="/img/posts/sales/dashboard/sales_dashboard_overall_markets.jpg">
+		<figcaption style="text-align: center;">Figure 1 - Overall dashboard with focus on Markets</figcaption>
+	  </figure>
+
+	<p>
+		From this first plot, we can see some overall statistics: the total revenue, profit and number of sales on the first line. The middle part of the dashboard present the revenue 
+		trend over the 4 years, with a pie chart presenting the amount of e-commerce vs local brick & mortar. Finally, the bar charts at the bottom show the contribution of each market 
+		in the dataset in revenue and profits. The latter can be changed to observe the contribution of the different customers and products as well. This can be very informative and 
+		suggestive in the markets, customers or products the company should be focusing on.
+	</p>
+
+	<figure>
+		<img src="/img/posts/sales/dashboard/sales_dashboard_2019_customer_page-0001.jpg">
+		<figcaption style="text-align: center;">Figure 2 - Overall dashboard with focus on Customers</figcaption>
+	  </figure>
+
+	<p>
+	This second figure shows the relative importance of different customers. We can see that Electricalsara Stores is one of the most important customer given the revenue and profit 
+	we generate from them. Looking at the top customers in each bar charts allows us to drive deeper insights. 
+	</p>
+
+	<figure>
+		<img src="/img/posts/sales/dashboard/electricalsara_stores.jpg" style="width: 33%;"><img src="/img/posts/sales/dashboard/top5_revenue_wo_number1.jpg" style="width: 33%;"><img src="/img/posts/sales/dashboard/top7_profit_perc.jpg" style="width: 33%;">
+		<figcaption style="text-align: center;">Figure 3/4/5 - Focus on Electricalsara Stores / Focus on top 6 Revenue without Electricalsara / Focus on top 7 Profit Margin %</figcaption>
+	</figure>
+
+	<p>
+		Looking at various variation of the dashboard, we can get really interesting insights. <br>
+		On the first figure, we can see the importance of the Electricalsara Stores as the main source of Revenue and Profit. However, we can see on the third bar chart that the profit 
+		margin percentage is quite low, meaning that the hardware company generates overall a good amount of money over a huge number of transactions with low profits. <br>
+		The second figure shows that the next 5 highest total revenue customers have various proportion of contribution towards global profit. We can see that Nixon and Electricalslytical 
+		are 2 very great customers with which our company makes a significant amount of transactions with fairly high profit. <br>
+		The last of the 3 figures show which markets make the most profit out of each transactions. Since this is a relative number, top customers in this category present various 
+		impacts in revenue. Again, Nixon is present in all top parts of the charts. Leader and Electricalsocity are also customers that present high numbers in revenue and profit.
+	</p>
+
+	<h3 id="BI">Business Insights</h3>
+	<p>
+		Many other insights can be made by looking at other variations of this dashboard. Since I cannot have it interactive here, I have printed some over <a href="https://github.com/ReneDCDSL/_PERSONAL-PROJECTS">here</a> <br>
+		Here are some high-level insights I would give my client with the appropriate dashboard illustrations:
+		<ul>
+			<li>Sales through E-commerce have decreased a bit since early 2018. However, the most profitable customers overall (2017-2020) are mostly doing business through e-commerce. 
+				Developing this type of sell may be interesting. As it is highly profitable, there are some leverage to be taken advantage of (investing more in ads, promotions..)
+			</li>
+			<li>
+				Leader, Control and Logic stores presented all high profits and revenue in 2019. It could be interesting to award them special benefits to maintain these interactions.
+			</li>
+			<li>
+
+			</li>
+		</ul>
+	</p>
 
 
 
@@ -743,5 +802,16 @@ Profit&nbsp;Margin&nbsp;Contribution&nbsp;%&nbsp;=<br><span class="Keyword" styl
 
 
 
-</body>
+
+
+
+
+
+
+
+
+
+
+
+	</body>
 
