added title and skills shadows

--- a/_posts/2023-10-06-Sales_Insights.html
+++ b/_posts/2023-10-06-Sales_Insights.html
@@ -1,11 +1,12 @@
 ---
 layout: post
 title: "Sales Insights"
+title_white: "TRUE"
 subtitle: "A sales dashboard displaying several years of a company performance"
 skills: "[SQL] [Power BI]"
 #date:
 background: '/img/posts/sales/bg_sales_3.jpg'
-#link: 'https://github.com/ReneDCDSL/Twitter_Sentiment_Analysis'
+link: 'https://github.com/ReneDCDSL//Sales_Insights/'
 ---
 
 <!DOCTYPE html>
@@ -116,6 +117,7 @@ background: '/img/posts/sales/bg_sales_3.jpg'
 		document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
 		}
 	</script>
+
 	<p>
 		This project is a sales insight on a mock data set from a hardware company. In this project, we try to analyze the sales revenue and profit evolution in various regions of India and for different customers over several years.
 	</p>
@@ -562,7 +564,7 @@ background: '/img/posts/sales/bg_sales_3.jpg'
 	</table>
 
 <p>
-	Here we have more than 150000 transactions. As we can see in the <strong>transactions</strong> table, there's a row that contain a -1. This should not happen as one should
+	Here we have more than 150000 transactions. As we can see in the transactions table, there's a row that contain a -1. This should not happen as one should
 	not be able to buy a produce of negative price.
 </p>
 
@@ -872,13 +874,14 @@ Profit&nbsp;Margin&nbsp;Contribution&nbsp;%&nbsp;=<br><span class="Keyword" styl
 	</p>
 
 	<h3 id="BI">Business Insights</h3>
+
 	<p>
-		Many other insights can be made by looking at other variations of this dashboard. Since I cannot have it interactive here, I have printed some records over <a href="https://github.com/ReneDCDSL/_PERSONAL-PROJECTS">here</a> <br>
+		Many other insights can be made by looking at other variations of this dashboard. Since I cannot have it interactive here, I have printed some records over <a href="https://github.com/ReneDCDSL/Sales_Insights/tree/main/dashboards">here</a> <br>
 		Here are some high-level insights I would give my client with the appropriate dashboard illustrations: 
 		Note: to showcase the performance, I will write in braces the KPI: <strong>[% Revenue contribution/% Profit contribution/% Avg Profit per transaction]</strong>
-	<h6>Overall</h6>
+	
+		<h6>Overall</h6>
 		<ul>
-			
 			<br><h6>Main customer: Electricalsara Stores</h6>
 			<li>
 				From 2017 to 2019, <strong>Electricalsara Stores</strong> have been the main contribution to the overall profit of the company, with more than a 3rd of the overall 
@@ -899,6 +902,7 @@ Profit&nbsp;Margin&nbsp;Contribution&nbsp;%&nbsp;=<br><span class="Keyword" styl
 				These highly profitable transactions gives the company leverage to be taken advantage of (investing in more ads, promotions..)
 			</li>
 		</ul>
+
 	<br><h6>2019: previous year performance</h6>
 	<ul>
 		<br><h6>Customers</h6>
@@ -909,6 +913,7 @@ Profit&nbsp;Margin&nbsp;Contribution&nbsp;%&nbsp;=<br><span class="Keyword" styl
 			encouraged.
 		</li>
 	</ul>
+
 	<br><h6>2020: current trend</h6>
 		<ul>
 			<br><h6>Tier A products: 083, 070, 206, 308</h6>
@@ -934,6 +939,7 @@ Profit&nbsp;Margin&nbsp;Contribution&nbsp;%&nbsp;=<br><span class="Keyword" styl
 	</p>
 
 	<h3 id="final">Final remarks</h3>
+
 	<p>
 		This dashboard is a simple yet informative version of the company sales state. It displays revenue and profit metrics, sales trend and the top markets, customers or 
 		products at any given time. There are still many other metrics, combinations of tables or charts that could be added. <br>
