sales subtitle update

--- a/_posts/2023-10-06-Sales_Insights.html
+++ b/_posts/2023-10-06-Sales_Insights.html
@@ -2,7 +2,7 @@
 layout: post
 title: "Sales Insights"
 title_white: "TRUE"
-subtitle: "A sales dashboard displaying several years of a company performance"
+subtitle: "Designing a sales dashboard displaying several years of a company performance"
 skills: "[SQL] [Power BI]"
 #date:
 background: '/img/posts/sales/bg_sales_3.jpg'
