table of content migraine, button go back top

--- a/_posts/2023-10-06-Sales_Insights.html
+++ b/_posts/2023-10-06-Sales_Insights.html
@@ -93,7 +93,7 @@ link: 'https://github.com/ReneDCDSL//Sales_Insights/'
 
 <body>
 	<!--Button to go back to top of page-->
-	<button onclick="topFunction()" id="myBtn" title="Go to top">Back top</button>
+	<button onclick="topFunction()" id="myBtn" title="Go to top">Go back top</button>
 
 	<!--Script for the button to go to top of page-->
 	<script>
