--- a/_posts/2023-02-21-Migraine.html
+++ b/_posts/2023-02-21-Migraine.html
@@ -1,9 +1,8 @@
 ---
 layout: post
 title: "Modelling the progression of migraine attacks: a bayesian hierarchical approach"
-subtitle: "Initial implementation of a powerful bayesian hierarchical model"
-skills: "[Big Data] [Baysesian Statistics] [Markov Model] [Bayesian Hierarchical Model]"
-#date:
+subtitle: "Implementation of a bayesian hierarchical model on a real medical dataset"
+skills: "[Big Data] [Baysesian Statistics] [Markov Chain Monte Carlo] [Bayesian Hierarchical Model]"
 background: '/img/posts/migraine/bg_migraine.jpg'
 ---
 
@@ -34,6 +33,9 @@ background: '/img/posts/migraine/bg_migraine.jpg'
 		#myBtn:hover {
 			background-color: #555; /* Add a dark-grey background on hover */
 }
+		.col_blue{
+			color: #007acc;
+		}
 	</style>
 
 </head>
@@ -44,7 +46,7 @@ background: '/img/posts/migraine/bg_migraine.jpg'
 
 <body>
 	<!--Button to go back to top of page-->
-	<button onclick="topFunction()" id="myBtn" title="Go to top">Back top</button>
+	<button onclick="topFunction()" id="myBtn" title="Go to top">Go back top</button>
 
 	<!--Script for the button to go to top of page-->
 	<script>
@@ -73,55 +75,131 @@ background: '/img/posts/migraine/bg_migraine.jpg'
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-01.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px;">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-02.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-03.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-04.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-05.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-06.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+
+	<br>
+	<p>
+		<h1 style="text-align: center;">Table of Content</h1>
+		<br>
+		<ul class="col_blue">
+			<li><a href="#C1" class="col_blue" ><b>I. Migraine</b></a></li>
+			<ul>
+				<li><a href="#C1" class="col_blue">1. Description and stages</a></li>
+				<li><a href="#1.2" class="col_blue">2. Epidemiology</a></li>
+				<li><a href="#1.3" class="col_blue">3. Diagnosis</a></li>
+				<li><a href="#1.4" class="col_blue">4. Quality of life</a></li>
+				<li><a href="#1.5" class="col_blue">5. Economic burden</a></li>
+				<li><a href="#1.6" class="col_blue">6. Electronic diaries in Migraine tracking</a></li>
+			</ul>
+			<li><a href="#C2" class="col_blue"><b>II. Data</b></a></li>
+			<ul>
+				<li><a href="#2.1" class="col_blue">1st dataset</a></li>
+				<ul>
+					<li><a href="#2.1" class="col_blue">Preprocessing</a></li>
+				</ul>
+				<li><a href="#2.2" class="col_blue">2nd dataset</a></li>
+				<ul>
+					<li><a href="#2.2" class="col_blue">Preprocessing</a></li>
+				</ul>
+			</ul>
+			<li><a href="#C3" class="col_blue"><b>III. Approach</b></a></li>
+			<ul>
+				<li><a href="#3.1" class="col_blue">1. A Markov Model</a></li>
+				<li><a href="#3.2" class="col_blue">2. A Bayeasian Approach</a></li>
+				<li><a href="#3.3" class="col_blue">3. A Hierarchical Model</a></li>
+			</ul>
+			<li><a href="#C4" class="col_blue"><b>IV. Markov Chain Monte Carlo methods</b></a></li>
+			<ul>
+				<li><a href="#C4" class="col_blue">1. Markov Chain Monte Carlo</a></li>
+				<ul>
+					<li><a href="#C4" class="col_blue">Process</a></li>
+					<li><a href="#4.1b" class="col_blue">Burn-in and thinning</a></li>
+				</ul>
+				<li><a href="#4.2" class="col_blue">2. Gibbs Sampling</a></li>
+				<li><a href="#4.3" class="col_blue">3. Metropolis-Hastings</a></li>
+				<li><a href="#4.4" class="col_blue">4. Hamiltonian Monte Carlo</a></li>
+				<ul>
+					<li><a href="#4.4a" class="col_blue">Example for a one-dimensional variable</a></li>
+				</ul>
+				<li><a href="#4.5" class="col_blue">5. No-U-Turn Sampler (NUTS)</a></li>
+			</ul>		
+			<li><a href="#C5" class="col_blue"><b>V. Application</b></a></li>
+			<ul>
+				<li><a href="#C5" class="col_blue">1. Model</a></li>
+				<ul>
+					<li><a href="#5.1a" class="col_blue">Model's specifications</a></li>
+					<li><a href="#5.1b" class="col_blue">Data input</a></li>
+					<li><a href="#5.1c" class="col_blue">Sampling with 1st dataset</a></li>
+					<li><a href="#5.1d" class="col_blue">Sampling with 2nd dataset</a></li>
+				</ul>
+				<li><a href="#5.2" class="col_blue">2. Convergence</a></li>
+				<li><a href="#5.3" class="col_blue">3. Generating transition matrix</a></li>
+			</ul>		
+			<li><a href="#C6" class="col_blue"><b>VI. Discussion</b></a></li>
+			<li><a href="#C7" class="col_blue"><b>VII. References</b></a></li>
+			<li><a href="#C8" class="col_blue"><b>VIII. Appendix</b></a></li>
+			<ul>
+				<li><a href="#C8" class="col_blue">A. Posterior distribution - Expansion and simplification</a></li>
+				<li><a href="#8.2" class="col_blue">B. Model convergence</a></li>
+				<li><a href="#8.3" class="col_blue">C. Models code</a></li>
+				<ul>
+					<li><a href="#8.3" class="col_blue">JAGS model</a></li>
+					<li><a href="#8.3b" class="col_blue">STAN model</a></li>
+				</ul>
+				<li><a href="#8.4" class="col_blue">D. Original &delta;</a></li>
+				<li><a href="#8.5" class="col_blue">E. Comparison of generated delta from JAGS and STAN</a></li>
+				<li><a href="#8.6" class="col_blue">F. Distribution of generated &delta;s</a></li>
+			</ul>	
+		</ul>
+	</p>
+	<br>
+	
+	</a><img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-06.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="C1"><a id="1.2"></a>
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-07.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-08.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-09.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-08.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px"><a id="1.3"></a>
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-09.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px"><a id="1.4"></a>
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-10.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-11.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-12.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-11.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="1.5">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-12.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="1.6">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-13.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-14.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-15.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-16.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-17.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-18.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-19.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-20.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-15.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="C2"><a id="2.1"></a>
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-16.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px"><a id="2.2"></a>
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-17.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="C3">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-18.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="3.1">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-19.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px"><a id="3.2"></a>
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-20.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px"><a id="3.3"></a>
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-21.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-22.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-23.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-24.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-23.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="C4">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-24.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="4.1b"><a id="4.2"></a>
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-25.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-26.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-27.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-28.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-29.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-30.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-31.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-26.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="4.3">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-27.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px"><a id="4.4"></a>
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-28.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px"><a id="4.4a"></a>
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-29.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px"><a id="4.5"></a>
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-30.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="C5"><a id="5.1a"></a>
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-31.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="5.1b"><a id="5.1c"></a>
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-32.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-33.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-34.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-33.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="5.1d">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-34.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="5.2">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-35.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-36.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-36.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="5.3">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-37.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-38.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-38.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="C6">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-39.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-40.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-40.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="C7">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-41.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-42.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-43.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-44.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-44.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="C8">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-45.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-46.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-47.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-48.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-46.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="8.2">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-47.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="8.3">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-48.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="8.3b">
 	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-49.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-50.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-51.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
-	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-52.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-50.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="8.4">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-51.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="8.5">
+	<img src="/files/Master_Thesis/Master_Thesis_Rene_de_Champs-52.jpg"  style="border: 1px solid #555; width: 100%; margin-bottom: 10px" id="8.6">
 
 
 	</p>
