update sales insights note

--- a/_posts/2023-10-06-Sales_Insights.html
+++ b/_posts/2023-10-06-Sales_Insights.html
@@ -877,8 +877,8 @@ Profit&nbsp;Margin&nbsp;Contribution&nbsp;%&nbsp;=<br><span class="Keyword" styl
 
 	<p>
 		Many other insights can be made by looking at other variations of this dashboard. Since I cannot have it interactive here, I have printed some records over <a href="https://github.com/ReneDCDSL/Sales_Insights/tree/main/dashboards">here</a> <br>
-		Here are some high-level insights I would give my client with the appropriate dashboard illustrations: 
-		Note: to showcase the performance, I will write in braces the KPI: <strong>[% Revenue contribution/% Profit contribution/% Avg Profit per transaction]</strong>
+		Here are some high-level insights I would give my client with the appropriate dashboard illustrations: <br>
+		<i><b>Note:</b> to showcase the performance, I will add the individual KPI as such:<br> <strong>[% Revenue contribution/% Profit contribution/% Avg Profit per transaction]</strong></i>
 	
 		<h6>Overall</h6>
 		<ul>
